🐛 Fix widths and spacings / responsive layouts

--- a/packages/components/src/styles/blocks/fieldset.scss
+++ b/packages/components/src/styles/blocks/fieldset.scss
@@ -12,8 +12,14 @@
 	max-width: 100%;
 }
 
-fieldset.nul {
+fieldset.xxs {
 	> * + * {
 		margin-block-start: 0;
+	}
+}
+
+fieldset.xs {
+	> * + * {
+		margin-block-start: getVar(margin-block-xs);
 	}
 }
